2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-02-22  Martin Liska  <mliska@suse.cz>

	PR lto/79587
	* data-streamer-in.c (streamer_read_gcov_count): Remove assert.
	* data-streamer-out.c (streamer_write_gcov_count_stream):
	Likewise.
	* value-prof.c (stream_out_histogram_value): Make assert more
	precise based on type of counter.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-22  Martin Liska  <mliska@suse.cz>

	PR target/79906
	* config/rs6000/rs6000.c (rs6000_inner_target_options): Show
	error message instead of an ICE.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-21  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/80081
	* Makefile.in: Add gcov-dump and fix installation of gcov-tool.
	* doc/gcc.texi: Include gcov-dump stuff.
	* doc/gcov-dump.texi: New file.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-20  Martin Liska  <mliska@suse.cz>

	PR middle-end/79753
	* tree-chkp.c (chkp_build_returned_bound): Do not build
	returned bounds for a LHS that's not a BOUNDED_P type.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-20  Martin Liska  <mliska@suse.cz>

	PR target/79769
	PR target/79770
	* tree-chkp.c (chkp_find_bounds_1): Handle REAL_CST,
	COMPLEX_CST and VECTOR_CST.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-14  Martin Liska  <mliska@suse.cz>

	PR middle-end/79831
	* doc/invoke.texi (-Wchkp): Document the option.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-03-13  Martin Liska  <mliska@suse.cz>

	PR middle-end/78339
	* ipa-pure-const.c (warn_function_noreturn): If the declarations
	is a CHKP clone, use original declaration.

2017-03-22  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2016-06-13  Martin Liska  <mliska@suse.cz>

	PR target/65705
	PR target/69804
	PR sanitizer/71458
